--- a/index.html
+++ b/index.html
@@ -10,26 +10,40 @@
 
 	<script src="vendor/gsap/gsap.min.js" defer></script>
 	<script src="vendor/gsap/ScrollTrigger.min.js" defer></script>
+	<script src="vendor/lenis/lenis.min.js" defer></script>
 
 	<script src="scripts/app.js" defer></script>
 </head>
 
 <body>
+
+<div class="pattern"></div>
+
+<div class="gradient-bg">
+	<div class="gradients-contaner">
+		<div class="g1"></div>
+		<div class="g2"></div>
+		<div class="g3"></div>
+		<div class="interactive"></div>
+	</div>
+</div>
+
 	<header class="header-top">
 		<div class="top-line">
 
 			<div class="top-line__left">
 				<a href="#" class="logo">
-					<img src="assets/images/logo.svg" alt="Alt">
+					<img src="assets/images/logo.png" alt="Alt">
 				</a>
 			</div>
 
 			<div class="top-line__center">
 				<nav class="top-mnu">
 					<ul>
-						<li><a href="#" data-text="Каталог">Каталог</a></li>
-						<li><a href="#" data-text="Доставка">Доставка</a></li>
-						<li><a href="#" data-text="Магазині">Магазині</a></li>
+						<li><a href="#" data-text="Главная">Главная</a></li>
+						<li><a href="#" data-text="Услуги">Услуги</a></li>
+						<li><a href="#" data-text="Партнёры">Партнёры</a></li>
+						<li><a href="#" data-text="Контакты">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -62,50 +76,65 @@
 
 			<div class="accordion__col activ" data-parallax-wrapper>
 				<div class="accordion__bg">
-					<img src="public/images/ready/1.jpg" alt="Alt" data-parallax-target>
+					<img src="public/images/ready/Наши услуги.jpg" alt="Alt" data-parallax-target>
 				</div>
-				<div class="accordion__start">Sport</div>
+				<div class="accordion__start">Наши услуги</div>
 				<div class="accordion__content">
 					<div class="accordion__header">
-						<h2>Sport</h2>
+						<h2>Наши услуги</h2>
 					</div>
 					<div class="accordion__description">
-						Проверяйте HTML-структуру - убедитесь, что элементы с такими классами существуют в DOM
-						Рекомендую добавить проверки на существование всех элементов, чтобы избежать подобных ошибок в будущем.
+						<ul>
+							<li>Съёмка под ключ</li>
+							<li>Рекламные ролики для соцсетей</li>
+							<li>Стоковые фото для брендов</li>
+							<li>Индивидуальные проекты</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 
 			<div class="accordion__col"data-parallax-wrapper>
 				<div class="accordion__bg">
-					<img src="public/images/ready/2.jpg" alt="Alt" data-parallax-target>
+					<img src="public/images/ready/Портфолио.jpg" alt="Alt" data-parallax-target>
 				</div>
-				<div class="accordion__start">Tourizm</div>
+				<div class="accordion__start">Портфолио</div>
 				<div class="accordion__content">
 					<div class="accordion__header">
-						<h2>Tourizm</h2>
+						<h2>Портфолио</h2>
 					</div>
 					<div class="accordion__description">
-						Мы создаем уникальный опыт для туристов, предлагая спортивное снаряжение, инновационные технологии и
-						вдохновляющие маршруты. Погружайтесь в приключения с экипировкой, которая связывает вас с природой и
-						активным отдыхом на каждом этапе.
+						Наши лучшие работы: рекламные съёмки, стоковые проекты и индивидуальные заказы. Здесь можно увидеть стиль, атмосферу и качество, с которыми мы подходим к каждому кадру.
 					</div>
 				</div>
 			</div>
 
 			<div class="accordion__col"data-parallax-wrapper>
 				<div class="accordion__bg">
-					<img src="public/images/ready/3.jpg" alt="Alt" data-parallax-target>
+					<img src="public/images/ready/Почему мы.jpg" alt="Alt" data-parallax-target>
 				</div>
-				<div class="accordion__start">Otdikh</div>
+				<div class="accordion__start">Почему мы</div>
 				<div class="accordion__content">
 					<div class="accordion__header">
-						<h2>Otdikh</h2>
+						<h2>Почему мы?</h2>
 					</div>
 					<div class="accordion__description">
-						Мы создаем идеальный отдых, предлагая комфортное снаряжение, инновационные решения и вдохновение для
-						путешествий. Расслабляйтесь и наслаждайтесь с экипировкой, которая делает каждый момент вашего отпуска
-						незабываемым и ярким.
+						Мы — студия стоковой и рекламной съёмки. Делаем фото и видео под ключ: от идеи до готового контента для бизнеса. Опыт на международных стоках помогает нам создавать кадры, которые работают и продают.
+					</div>
+				</div>
+			</div>
+
+			<div class="accordion__col"data-parallax-wrapper>
+				<div class="accordion__bg">
+					<img src="public/images/ready/Блоги.jpg" alt="Alt" data-parallax-target>
+				</div>
+				<div class="accordion__start">Блоги</div>
+				<div class="accordion__content">
+					<div class="accordion__header">
+						<h2>Блоги</h2>
+					</div>
+					<div class="accordion__description">
+						Делимся опытом и закулисьем: как устроена стоковая индустрия, как строится визуальный контент для брендов и как на этом можно зарабатывать. Прямо, понятно и по делу.
 					</div>
 				</div>
 			</div>
@@ -115,10 +144,10 @@
 		<section class="gallery">
 
 <div class="section-head">
-	<h2>gallery</h2>
+	<h2>Блоги</h2>
 	<div class="section-head__right">
 		<a href="#" class="btn-secondary">
-			<span data-text="all galery">All gallery</span>
+			<span data-text="all galery">Категории</span>
 		</a>
 	</div>
 </div>
@@ -128,7 +157,7 @@
 	<div class="gallery__item">
 		<a href="#">
 			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/1.jpg" alt="alt" data-parallax-target>
+				<img src="public/images/ready/Про заработок.jpg" alt="alt" data-parallax-target>
 			</div>
 		</a>
 	</div>
@@ -136,7 +165,7 @@
 	<div class="gallery__item">
 		<a href="#">
 			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/2.jpg" alt="alt" data-parallax-target>
+				<img src="public/images/ready/Как зар на стоках.jpg" alt="alt" data-parallax-target>
 			</div>
 		</a>
 	</div>
@@ -144,7 +173,7 @@
 		<div class="gallery__item">
 		<a href="#">
 			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/3.jpg" alt="alt" data-parallax-target>
+				<img src="public/images/ready/Ошібки нов.jpg" alt="alt" data-parallax-target>
 			</div>
 		</a>
 	</div>
