--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 <body>
 
-<div class="pattern"></div>
+	<div class="pattern"></div>
 
-<div class="gradient-bg">
-	<div class="gradients-contaner">
-		<div class="g1"></div>
-		<div class="g2"></div>
-		<div class="g3"></div>
-		<div class="interactive"></div>
+	<div class="gradient-bg">
+		<div class="gradients-contaner">
+			<div class="g1"></div>
+			<div class="g2"></div>
+			<div class="g3"></div>
+			<div class="interactive"></div>
+		</div>
 	</div>
-</div>
 
 	<header class="header-top">
 		<div class="top-line">
@@ -57,13 +57,64 @@
 				</div>
 				<div class="main-menu-background"></div>
 				<div class="main-menu">
+
 					<nav class="main-menu__inner">
-						<ul>
-							<li><a href="#" data-text="Каталог">Каталог<span></span></a></li>
-							<li><a href="#" data-text="Доставка">Доставка<span></span></a></li>
-							<li><a href="#" data-text="Магазині">Магазині<span></span></a></li>
-						</ul>
+						<nav class="menu-pro">
+							<!-- О студии -->
+							<section class="menu-pro__card">
+								<h3 class="menu-pro__title">О студии</h3>
+								<p class="menu-pro__text">
+									L&amp;R Visuals — студия стоковой и рекламной съемки. Делаем фото и видео под ключ: от идеи до
+									результата.
+								</p>
+							</section>
+
+							<!-- Навигация сайта -->
+							<section class="menu-pro__card">
+								<h3 class="menu-pro__title">Навигация</h3>
+								<div class="menu-pro__grid">
+									<a href="/">Главная</a>
+									<a href="/services">Услуги</a>
+									<a href="/partners">Партнеры</a>
+									<a href="/contacts">Контакты</a>
+									<a href="/portfolio">Портфолио</a>
+									<a href="/blog">Блоги</a>
+								</div>
+							</section>
+
+							<!-- Наши направления (аккордеон) -->
+							<section class="menu-pro__card">
+								<button class="menu-pro__accordion" type="button" aria-expanded="false" aria-controls="menu-pro-dirs">
+									Наши направления
+									<svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+										<path d="M6 9l6 6 6-6" fill="none" stroke="currentColor" stroke-width="2" />
+									</svg>
+								</button>
+								<div id="menu-pro-dirs" class="menu-pro__panel" hidden>
+									<a href="/services/ads-photo">Рекламная съемка</a>
+									<a href="/services/brand-video">Видео для брендов</a>
+									<a href="/services/social-content">Контент для соцсетей</a>
+									<a href="/services/stock">Стоковые фото</a>
+								</div>
+							</section>
+
+							<!-- CTA -->
+							<section class="menu-pro__cta">
+								<a class="menu-pro__btn" href="/brief">Оставить заявку</a>
+							</section>
+
+							<!-- Контакты -->
+							<section class="menu-pro__card">
+								<h3 class="menu-pro__title">Быстрая связь</h3>
+								<ul class="menu-pro__contacts">
+									<li><a href="https://t.me/smska" target="_blank" rel="noopener">Telegram</a></li>
+									<li><a href="mailto:hello@lrvisuals.com">hello@lrvisuals.com</a></li>
+									<li><a href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+								</ul>
+							</section>
+						</nav>
 					</nav>
+
 				</div>
 			</div>
 
@@ -94,7 +145,7 @@
 				</div>
 			</div>
 
-			<div class="accordion__col"data-parallax-wrapper>
+			<div class="accordion__col" data-parallax-wrapper>
 				<div class="accordion__bg">
 					<img src="public/images/ready/Портфолио.jpg" alt="Alt" data-parallax-target>
 				</div>
@@ -104,12 +155,13 @@
 						<h2>Портфолио</h2>
 					</div>
 					<div class="accordion__description">
-						Наши лучшие работы: рекламные съёмки, стоковые проекты и индивидуальные заказы. Здесь можно увидеть стиль, атмосферу и качество, с которыми мы подходим к каждому кадру.
+						Наши лучшие работы: рекламные съёмки, стоковые проекты и индивидуальные заказы. Здесь можно увидеть стиль,
+						атмосферу и качество, с которыми мы подходим к каждому кадру.
 					</div>
 				</div>
 			</div>
 
-			<div class="accordion__col"data-parallax-wrapper>
+			<div class="accordion__col" data-parallax-wrapper>
 				<div class="accordion__bg">
 					<img src="public/images/ready/Почему мы.jpg" alt="Alt" data-parallax-target>
 				</div>
@@ -119,12 +171,13 @@
 						<h2>Почему мы?</h2>
 					</div>
 					<div class="accordion__description">
-						Мы — студия стоковой и рекламной съёмки. Делаем фото и видео под ключ: от идеи до готового контента для бизнеса. Опыт на международных стоках помогает нам создавать кадры, которые работают и продают.
+						Мы — студия стоковой и рекламной съёмки. Делаем фото и видео под ключ: от идеи до готового контента для
+						бизнеса. Опыт на международных стоках помогает нам создавать кадры, которые работают и продают.
 					</div>
 				</div>
 			</div>
 
-			<div class="accordion__col"data-parallax-wrapper>
+			<div class="accordion__col" data-parallax-wrapper>
 				<div class="accordion__bg">
 					<img src="public/images/ready/Блоги.jpg" alt="Alt" data-parallax-target>
 				</div>
@@ -134,7 +187,8 @@
 						<h2>Блоги</h2>
 					</div>
 					<div class="accordion__description">
-						Делимся опытом и закулисьем: как устроена стоковая индустрия, как строится визуальный контент для брендов и как на этом можно зарабатывать. Прямо, понятно и по делу.
+						Делимся опытом и закулисьем: как устроена стоковая индустрия, как строится визуальный контент для брендов и
+						как на этом можно зарабатывать. Прямо, понятно и по делу.
 					</div>
 				</div>
 			</div>
@@ -143,42 +197,42 @@
 
 		<section class="gallery">
 
-<div class="section-head">
-	<h2>Блоги</h2>
-	<div class="section-head__right">
-		<a href="#" class="btn-secondary">
-			<span data-text="all galery">Категории</span>
-		</a>
-	</div>
-</div>
-
-<div class="gallery__wrapper">
-
-	<div class="gallery__item">
-		<a href="#">
-			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/Про заработок.jpg" alt="alt" data-parallax-target>
+			<div class="section-head">
+				<h2>Блоги</h2>
+				<div class="section-head__right">
+					<a href="#" class="btn-secondary">
+						<span data-text="all galery">Категории</span>
+					</a>
+				</div>
 			</div>
-		</a>
-	</div>
 
-	<div class="gallery__item">
-		<a href="#">
-			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/Как зар на стоках.jpg" alt="alt" data-parallax-target>
+			<div class="gallery__wrapper">
+
+				<div class="gallery__item">
+					<a href="#">
+						<div class="gallery__preview" data-parallax-wrapper>
+							<img src="public/images/ready/Про заработок.jpg" alt="alt" data-parallax-target>
+						</div>
+					</a>
+				</div>
+
+				<div class="gallery__item">
+					<a href="#">
+						<div class="gallery__preview" data-parallax-wrapper>
+							<img src="public/images/ready/Как зар на стоках.jpg" alt="alt" data-parallax-target>
+						</div>
+					</a>
+				</div>
+
+				<div class="gallery__item">
+					<a href="#">
+						<div class="gallery__preview" data-parallax-wrapper>
+							<img src="public/images/ready/Ошібки нов.jpg" alt="alt" data-parallax-target>
+						</div>
+					</a>
+				</div>
+
 			</div>
-		</a>
-	</div>
-
-		<div class="gallery__item">
-		<a href="#">
-			<div class="gallery__preview" data-parallax-wrapper>
-				<img src="public/images/ready/Ошібки нов.jpg" alt="alt" data-parallax-target>
-			</div>
-		</a>
-	</div>
-
-</div>
 
 		</section>
 
