--- a/index.html
+++ b/index.html
@@ -210,29 +210,96 @@
 
 				<div class="gallery__item">
 					<a href="#">
-						<div class="gallery__preview" data-parallax-wrapper>
-							<img src="public/images/ready/Про заработок.jpg" alt="alt" data-parallax-target>
+						<div class="gallery__preview">
+							<img src="public/images/ready/Про заработок.jpg" alt="alt">
+							<div class="gallery__caption"><span>Про заработок</span>
+							</div>
 						</div>
 					</a>
 				</div>
 
 				<div class="gallery__item">
 					<a href="#">
-						<div class="gallery__preview" data-parallax-wrapper>
-							<img src="public/images/ready/Как зар на стоках.jpg" alt="alt" data-parallax-target>
+						<div class="gallery__preview">
+							<img src="public/images/ready/Как зар на стоках.jpg" alt="alt">
+							<div class="gallery__caption"><span>Как зарабатывать на стоках</span>
+							</div>
 						</div>
 					</a>
 				</div>
 
 				<div class="gallery__item">
 					<a href="#">
-						<div class="gallery__preview" data-parallax-wrapper>
-							<img src="public/images/ready/Ошібки нов.jpg" alt="alt" data-parallax-target>
+						<div class="gallery__preview">
+							<img src="public/images/ready/Ошібки нов.jpg" alt="alt">
+							<div class="gallery__caption"><span>Ошибки новичков</span>
+							</div>
 						</div>
 					</a>
 				</div>
 
 			</div>
+
+			<!-- Кнопка доната / поддержки -->
+<div class="support-block">
+	<a class="support-button" href="#">
+		Поддержать проект
+	</a>
+</div>
+
+<!-- ФУТЕР -->
+<footer class="site-footer">
+
+	<div class="site-footer__inner">
+		<!-- Левая колонка -->
+		<div class="footer-col footer-col--brand">
+			<div class="footer-logo">
+				<img src="assets/images/logo.png" alt="L&R Visuals">
+			</div>
+		</div>
+
+		<!-- Средняя колонка: навигация -->
+		<nav class="footer-col footer-col--nav" aria-label="Навигация по сайту">
+			<ul class="footer-nav">
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="services.html">Услуги</a></li>
+				<li><a href="partners.html">Партнеры</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="landing.html">Заставка</a></li>
+			</ul>
+		</nav>
+
+		<!-- Правая колонка: соцсети -->
+		<div class="footer-col footer-col--social">
+			<div class="footer-social-title">Мы на связи</div>
+			<ul class="footer-social">
+				<li>
+					<a href="https://t.me/smska" target="_blank" rel="noopener">
+						<span class="footer-social__icon footer-social__icon--tg"></span>
+						Telegram
+					</a>
+				</li>
+				<li>
+					<a href="https://instagram.com/" target="_blank" rel="noopener">
+						<span class="footer-social__icon footer-social__icon--ig"></span>
+						Instagram
+					</a>
+				</li>
+				<li>
+					<a href="mailto:hello@lrvisuals.com">
+						<span class="footer-social__icon footer-social__icon--mail"></span>
+						Email
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="site-footer__legal">
+		© L&R Visuals Studio, 2025. Все права защищены.
+	</div>
+
+</footer>
 
 		</section>
 
