--- a/landing.html
+++ b/landing.html
@@ -16,8 +16,6 @@
 </head>
 <body>
 
-  <!-- логотип студии -->
-  <div class="logo" style="background-image: url(landing/img/logo.svg);"></div>
 
   <section class="layers">
     <div class="layers__container">
@@ -42,6 +40,10 @@
       <div class="layers__item layer-4">
         <canvas class="rain"></canvas>
       </div>
+
+			<div class="layers__item layer-logo">
+      <div class="logo" style="background-image: url(landing/img/logo.png);"></div>
+    </div>
 
       <div class="layers__item layer-5" style="background-image: url(landing/img/layer-5.png);"></div>
       <div class="layers__item layer-6" style="background-image: url(landing/img/layer-6.png);"></div>
